rasn-compiler-tests/tests/snapshots/simple_types__enumerated.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " Test-Enum ::= ENUMERATED {\n            test-1,\n            test-2(7)\n        }\n        test-enum-val Test-Enum ::= test-2          "
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash , Copy)] # [rasn (enumerated , identifier = "Test-Enum")] pub enum TestEnum { # [rasn (identifier = "test-1")] test_1 = 0 , # [rasn (identifier = "test-2")] test_2 = 7 , } pub const TEST_ENUM_VAL : TestEnum = TestEnum :: test_2 ; }
