rasn-compiler-tests/tests/snapshots/simple_types__general.snap
---
source: rasn-compiler-tests/tests/simple_types.rs
description: " Test-String ::= GeneralString\n        test-string-val Test-String ::= \"012345\""
---
Generated:
# [allow (non_camel_case_types , non_snake_case , non_upper_case_globals , unused , clippy :: too_many_arguments ,)] pub mod test_module { extern crate alloc ; use core :: borrow :: Borrow ; use std :: sync :: LazyLock ; use rasn :: prelude :: * ; # [derive (AsnType , Debug , Clone , Decode , Encode , PartialEq , Eq , Hash)] # [rasn (delegate , identifier = "Test-String")] pub struct TestString (pub GeneralString) ; pub static TEST_STRING_VAL : LazyLock < TestString > = LazyLock :: new (|| TestString (GeneralString :: try_from (String :: from ("012345")) . unwrap ())) ; }
